[gd_scene load_steps=41 format=2]

[ext_resource path="res://GameSences/Play.gd" type="Script" id=1]
[ext_resource path="res://Assests/Shader/split_screen.shader" type="Shader" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Beatmap.gd" type="Script" id=6]
[ext_resource path="res://Assests/Sprite/key_overlay_base.png" type="Texture" id=7]
[ext_resource path="res://Assests/Sprite/key.png" type="Texture" id=8]
[ext_resource path="res://Assests/Sprite/hit_error.png" type="Texture" id=9]
[ext_resource path="res://GameComponents/PerformancePanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assests/Sprite/score_board_mask.png" type="Texture" id=11]
[ext_resource path="res://Assests/Sprite/score_board_mask_inner.png" type="Texture" id=12]
[ext_resource path="res://Assests/Fonts/NotoSansSC-Regular.otf" type="DynamicFontData" id=13]
[ext_resource path="res://Assests/Sprite/start_button.png" type="Texture" id=14]
[ext_resource path="res://GameSences/ScoreBoard.gd" type="Script" id=15]
[ext_resource path="res://Assests/Fonts/Jost-Regular.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Assests/Sprite/progress1.png" type="Texture" id=17]
[ext_resource path="res://Assests/Sprite/progress2.png" type="Texture" id=18]
[ext_resource path="res://Assests/Fonts/noto.tres" type="DynamicFont" id=19]
[ext_resource path="res://Assests/Sprite/miss_capsule.png" type="Texture" id=20]
[ext_resource path="res://Assests/Sprite/ok_capsule.png" type="Texture" id=21]
[ext_resource path="res://Assests/Sprite/combo_capsule.png" type="Texture" id=22]

[sub_resource type="ProceduralSky" id=10]

[sub_resource type="Environment" id=9]
background_mode = 2
background_sky = SubResource( 10 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 2 )
shader_param/viewport_size = null
shader_param/split_active = null
shader_param/player1_position = null
shader_param/player2_position = null
shader_param/split_line_thickness = null
shader_param/split_line_color = null

[sub_resource type="CylinderMesh" id=13]
height = 0.1

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CylinderShape" id=19]
height = 2.009
radius = 0.2

[sub_resource type="CylinderMesh" id=14]
height = 0.1

[sub_resource type="SpatialMaterial" id=17]
albedo_color = Color( 0, 0.447059, 0.772549, 1 )

[sub_resource type="CylinderShape" id=20]
radius = 0.2

[sub_resource type="PlaneMesh" id=15]
size = Vector2( 200000, 200000 )

[sub_resource type="SpatialMaterial" id=18]

[sub_resource type="DynamicFont" id=27]
size = 50
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 46, 73 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 50 ]
}

[sub_resource type="Animation" id=29]
resource_name = "combo_add"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 0.203063, 1, 1 ),
"update": 0,
"values": [ 50, 80, 50 ]
}

[sub_resource type="Animation" id=26]
resource_name = "back_to_menu"
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreBoardMask:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 6.06286, 1, 0.225313 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScoreBoardMaskInner:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 5.46416, 0.450625 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "exit_button_hover"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.93187, 0.210224 ),
"update": 0,
"values": [ Vector2( 720, 528 ), Vector2( 688, 520 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "spared"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreBoardMask:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 6.06286, 0.225313 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScoreBoardMaskInner:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.18, 0.5 ),
"transitions": PoolRealArray( 1, 5.46416, 0.450625 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=25]
size = 30
font_data = ExtResource( 13 )

[node name="World" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 1, 0, 0, 0, -0.818651, 0.574291, 0, -0.574291, -0.818651, 0, 70.567, -72.367 )
shadow_color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="Cameras" type="Spatial" parent="."]
script = ExtResource( 5 )
max_separation = 10.0
split_line_thickness = 10.0

[node name="View" type="TextureRect" parent="Cameras"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="Viewport1" type="Viewport" parent="Cameras"]
size = Vector2( 100, 100 )
msaa = 2
usage = 3
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera1" type="Camera" parent="Cameras/Viewport1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0 )
current = true

[node name="Viewport2" type="Viewport" parent="Cameras"]
size = Vector2( 100, 100 )
msaa = 2
usage = 3
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera2" type="Camera" parent="Cameras/Viewport2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0 )
current = true

[node name="Player1" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0.253 )
script = ExtResource( 3 )
id = 0

[node name="Mesh" type="MeshInstance" parent="Player1"]
mesh = SubResource( 13 )
material/0 = SubResource( 16 )

[node name="CollisionShape" type="CollisionShape" parent="Player1"]
shape = SubResource( 19 )

[node name="Player2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.18358, 1.25, 3.01882 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="Mesh" type="MeshInstance" parent="Player2"]
mesh = SubResource( 14 )
material/0 = SubResource( 17 )

[node name="CollisionShape" type="CollisionShape" parent="Player2"]
shape = SubResource( 20 )

[node name="BaseMeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 15 )
material/0 = SubResource( 18 )

[node name="Play" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="Play"]

[node name="KeyOverlay1" type="Node2D" parent="Play/Node2D"]
position = Vector2( 0, 256 )

[node name="KeyOverlayBase" type="Sprite" parent="Play/Node2D/KeyOverlay1"]
position = Vector2( 48, 23 )
texture = ExtResource( 7 )

[node name="Key1" type="Sprite" parent="Play/Node2D/KeyOverlay1"]
position = Vector2( 25, 23 )
texture = ExtResource( 8 )

[node name="Key2" type="Sprite" parent="Play/Node2D/KeyOverlay1"]
position = Vector2( 71, 23 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Play/Node2D/KeyOverlay1"]
margin_left = 17.0
margin_top = 16.0
margin_right = 34.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "K1"

[node name="Label2" type="Label" parent="Play/Node2D/KeyOverlay1"]
margin_left = 64.0
margin_top = 16.0
margin_right = 81.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "K2"

[node name="KeyOverlay2" type="Node2D" parent="Play/Node2D"]
position = Vector2( 926, 256 )

[node name="KeyOverlayBase" type="Sprite" parent="Play/Node2D/KeyOverlay2"]
position = Vector2( 48, 23 )
texture = ExtResource( 7 )

[node name="Key3" type="Sprite" parent="Play/Node2D/KeyOverlay2"]
position = Vector2( 25, 23 )
texture = ExtResource( 8 )

[node name="Key4" type="Sprite" parent="Play/Node2D/KeyOverlay2"]
position = Vector2( 71, 23 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Play/Node2D/KeyOverlay2"]
margin_left = 17.0
margin_top = 16.0
margin_right = 34.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "K3"

[node name="Label2" type="Label" parent="Play/Node2D/KeyOverlay2"]
margin_left = 64.0
margin_top = 16.0
margin_right = 81.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "K4"

[node name="Combo" type="Node2D" parent="Play/Node2D"]

[node name="Label" type="Label" parent="Play/Node2D/Combo"]
margin_left = 8.0
margin_top = -6.0
margin_right = 54.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Play/Node2D/Combo"]
anims/RESET = SubResource( 28 )
anims/combo_add = SubResource( 29 )

[node name="ProgressBar" type="Node2D" parent="Play/Node2D"]

[node name="ProgressBar" type="Sprite" parent="Play/Node2D/ProgressBar"]
position = Vector2( 511, 15 )
texture = ExtResource( 9 )

[node name="Track2Progress" type="TextureProgress" parent="Play/Node2D/ProgressBar/ProgressBar"]
margin_left = -252.0
margin_top = 3.0
margin_right = 251.0
margin_bottom = 17.0
texture_progress = ExtResource( 18 )

[node name="Track1Progress" type="TextureProgress" parent="Play/Node2D/ProgressBar/ProgressBar"]
margin_left = -252.0
margin_top = -15.0
margin_right = -212.0
margin_bottom = -3.0
texture_progress = ExtResource( 17 )

[node name="ScoreBoard" type="Node2D" parent="Play/Node2D"]
script = ExtResource( 15 )

[node name="ScoreBoardMask" type="Sprite" parent="Play/Node2D/ScoreBoard"]
position = Vector2( 512, 300 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 11 )

[node name="ScoreBoardMaskInner" type="Sprite" parent="Play/Node2D/ScoreBoard"]
position = Vector2( 513, 300 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 12 )

[node name="MissCapsule2" type="Sprite" parent="Play/Node2D/ScoreBoard"]
position = Vector2( 704, 160 )
texture = ExtResource( 20 )

[node name="Track2Miss" type="Label" parent="Play/Node2D/ScoreBoard/MissCapsule2"]
margin_left = -144.0
margin_top = -24.0
margin_right = 54.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 19 )
text = "Track1 Missed: "

[node name="MissCapsule1" type="Sprite" parent="Play/Node2D/ScoreBoard"]
position = Vector2( 704, 232 )
texture = ExtResource( 20 )

[node name="Track1Miss" type="Label" parent="Play/Node2D/ScoreBoard/MissCapsule1"]
margin_left = -144.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 19 )
text = "Track2 Missed: "

[node name="OkCapsule1" type="Sprite" parent="Play/Node2D/ScoreBoard"]
position = Vector2( 296, 160 )
texture = ExtResource( 21 )

[node name="Track1Ok" type="Label" parent="Play/Node2D/ScoreBoard/OkCapsule1"]
margin_left = -144.0
margin_top = -24.0
margin_right = 54.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 19 )
text = "Track1 Collected: "

[node name="OkCapsule2" type="Sprite" parent="Play/Node2D/ScoreBoard"]
position = Vector2( 296, 232 )
texture = ExtResource( 21 )

[node name="Track2Ok" type="Label" parent="Play/Node2D/ScoreBoard/OkCapsule2"]
margin_left = -144.0
margin_top = -24.0
margin_right = 54.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 19 )
text = "Track2 Collected: "

[node name="ComboCapsule" type="Sprite" parent="Play/Node2D/ScoreBoard"]
position = Vector2( 296, 336 )
texture = ExtResource( 22 )

[node name="Combo" type="Label" parent="Play/Node2D/ScoreBoard/ComboCapsule"]
margin_left = -144.0
margin_top = -24.0
margin_right = 41.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 19 )
text = "Highest Combo: "

[node name="AnimationPlayer" type="AnimationPlayer" parent="Play/Node2D/ScoreBoard"]
anims/back_to_menu = SubResource( 26 )
anims/exit_button_hover = SubResource( 24 )
anims/spared = SubResource( 22 )

[node name="TextureButton" type="TextureButton" parent="Play/Node2D/ScoreBoard"]
margin_left = 720.0
margin_top = 528.0
margin_right = 1068.0
margin_bottom = 620.0
texture_normal = ExtResource( 14 )

[node name="Label" type="Label" parent="Play/Node2D/ScoreBoard/TextureButton"]
margin_left = 88.0
margin_top = 16.0
margin_right = 281.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Back to menu"

[node name="Beatmap" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Objects" type="Node" parent="Beatmap"]

[node name="TrackMesh" type="Node" parent="Beatmap"]

[node name="Timer" type="Timer" parent="."]

[node name="FPS" parent="." instance=ExtResource( 10 )]

[connection signal="area_entered" from="Player1" to="Beatmap" method="_on_Player1_area_entered"]
[connection signal="area_entered" from="Player1" to="Play" method="_on_Player1_area_entered"]
[connection signal="area_exited" from="Player1" to="Play" method="_on_Player1_area_exited"]
[connection signal="area_entered" from="Player2" to="Beatmap" method="_on_Player2_area_entered"]
[connection signal="area_entered" from="Player2" to="Play" method="_on_Player2_area_entered"]
[connection signal="area_exited" from="Player2" to="Play" method="_on_Player2_area_exited"]
[connection signal="animation_finished" from="Play/Node2D/ScoreBoard/AnimationPlayer" to="Play/Node2D/ScoreBoard" method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="Play/Node2D/ScoreBoard/TextureButton" to="Play/Node2D/ScoreBoard" method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="Play/Node2D/ScoreBoard/TextureButton" to="Play/Node2D/ScoreBoard" method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="Play/Node2D/ScoreBoard/TextureButton" to="Play/Node2D/ScoreBoard" method="_on_TextureButton_pressed"]
[connection signal="ready" from="Beatmap" to="Play" method="_on_Beatmap_ready"]
[connection signal="timeout" from="Timer" to="Beatmap" method="_on_Timer_timeout"]
